- refactoring user controller

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -42,9 +42,9 @@
                     </a>
                   </li>
                   <li class="col-md-4 nomargin">
-                    <a class="" title="<%= pluralize(@followers_user.length, 'Follower') %>" href="/followers">
+                    <a class="" title="<%= pluralize(@followers_users.length, 'Follower') %>" href="/followers">
                       <span class="span">Followers</span>
-                      <span class="value"><%= @followers_user.length %></span>
+                      <span class="value"><%= @followers_users.length %></span>
                     </a>
                   </li>
                 </ul>
