--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -15,7 +15,7 @@ html body {
 }
 
 .global_index {
-  background: url("http://localhost:3000/img/background.jpg") no-repeat fixed 0 0;
+  background: url("/img/background.jpg") no-repeat fixed 0 0;
   background-size: cover;
   position: absolute;
   top: 0;
@@ -42,14 +42,14 @@ html body {
   height: 23px;
 }
 
-.iconText {
+.icon_text {
   padding-top: 3px;
   padding-left: 5px;
   font-size: 13px;
 }
 
-.iconHome {
-  background: url("http://localhost:3000/img/home.png");
+.icon_home {
+  background: url("/img/home.png");
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 30px;
@@ -59,15 +59,15 @@ html body {
   color: #596771;
 }
 
-.iconHome:hover {
-  background: url("http://localhost:3000/img/homeH.png");
+.icon_home:hover {
+  background: url("/img/homeH.png");
   height: 24px;
   background-size: cover;
   color: #0083b3;
 }
 
-.iconNotifications {
-  background: url("http://localhost:3000/img/bell.png");
+.icon_notifications {
+  background: url("/img/bell.png");
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 65px;
@@ -77,15 +77,15 @@ html body {
   color: #596771;
 }
 
-.iconNotifications:hover {
-  background: url("http://localhost:3000/img/bellH.png");
+.icon_notifications:hover {
+  background: url("/img/bellH.png");
   height: 24px;
   background-size: cover;
   color: #0083b3;
 }
 
-.iconDiscover {
-  background: url("http://localhost:3000/img/iconNav.png") no-repeat -105px 0px;
+.icon_discover {
+  background: url("/img/iconNav.png") no-repeat -105px 0px;
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 50px;
@@ -95,15 +95,15 @@ html body {
   color: #596771;
 }
 
-.iconDiscover:hover {
-  background: url("http://localhost:3000/img/iconNavH.png") no-repeat -105px 0px;
+.icon_discover:hover {
+  background: url("/img/iconNavH.png") no-repeat -105px 0px;
   height: 24px;
   background-size: cover;
   color: #0083b3;
 }
 
-.iconProfile {
-  background: url("http://localhost:3000/img/user.png") no-repeat;
+.icon_profile {
+  background: url("/img/user.png") no-repeat;
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 15px;
@@ -111,22 +111,22 @@ html body {
   margin-top: 0px;
   color: #596771;
 }
-.iconProfile:hover {
-  background: url("http://localhost:3000/img/userH.png") no-repeat;
+.icon_profile:hover {
+  background: url("/img/userH.png") no-repeat;
   background-size: cover;
   color: #0083b3;
 }
 
 .iconBird {
-  background: url("http://localhost:3000/img/iconBird.png") no-repeat;
+  background: url("/img/iconBird.png") no-repeat;
   background-size: contain;
   margin-left: 15%;
   margin-right: 20%;
   float: left;
 }
 
-.iconMessage {
-  background: url("http://localhost:3000/img/iconRight.png") no-repeat 0px 0px;
+.icon_message {
+  background: url("/img/iconRight.png") no-repeat 0px 0px;
   padding-right: 4px;
   padding-left: 30px;
   width: auto;
@@ -134,13 +134,13 @@ html body {
   background-size: cover;
 }
 
-.iconMessage:hover{
-  background: url("http://localhost:3000/img/iconRightH.png") no-repeat 0px 0px;
+.icon_message:hover{
+  background: url("/img/iconRightH.png") no-repeat 0px 0px;
   background-size: cover;
 }
 
-.iconSetting {
-  background: url("http://localhost:3000/img/cog.png") no-repeat;
+.icon_setting {
+  background: url("/img/cog.png") no-repeat;
   padding-right: 4px;
   padding-left: 30px;
   width: auto;
@@ -148,8 +148,8 @@ html body {
   background-size: contain;
 }
 
-.iconSetting:hover{
-  background: url("http://localhost:3000/img/cogH.png") no-repeat;
+.icon_setting:hover{
+  background: url("/img/cogH.png") no-repeat;
   background-size: contain;
 }
 
@@ -217,7 +217,7 @@ html body {
 }
 
 .search-icon {
-  background: url("http://localhost:3000/img/iconFind.png") no-repeat;
+  background: url("/img/iconFind.png") no-repeat;
   position: absolute;
   top: 17px;
   margin-left: 190px;
