--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,34 +14,31 @@
 
         <div class="left" role="navigation">
           <ul class="list-inline">
-            <li data-global-action="home">
-              <a data-placement="bottom" href="/home" data-no-turbolink>
-                <div class="icon iconHome">
-                  <div class="iconText">Home</div>
+            <li>
+              <a href="/home" data-no-turbolink>
+                <div class="icon icon_home">
+                  <div class="icon_text">Home</div>
                 </div>
               </a>
             </li>
-            <li class="people notifications" data-global-action="connect">
-              <a data-placement="bottom"
-                 data-component-term="connect_nav" data-nav="connect">
-                <div class="icon iconNotifications">
-                  <div class="iconText">Notification</div>
+            <li class="people notifications">
+              <a>
+                <div class="icon icon_notifications">
+                  <div class="icon_text">Notification</div>
                 </div>
               </a>
             </li>
-            <li class="topics" data-global-action="discover">
-              <a data-placement="bottom"
-                 data-component-term="discover_nav" data-nav="discover">
-                <div class="icon iconDiscover">
-                  <div class="iconText">Discover</div>
+            <li class="topics">
+              <a>
+                <div class="icon icon_discover">
+                  <div class="icon_text">Discover</div>
                 </div>
               </a>
             </li>
             <li class="profile" data-global-action="profile">
-              <a data-placement="bottom" href="/<%=current_user.fullname %>"
-                 data-component-term="profile_nav" data-nav="profile" data-no-turbolink>
-                <div class="icon iconProfile">
-                  <div class="iconText">Me</div>
+              <a href="/<%=current_user.fullname %>" data-no-turbolink>
+                <div class="icon icon_profile">
+                  <div class="icon_text">Me</div>
                 </div>
               </a>
             </li>
@@ -59,11 +56,11 @@
 
         <ul class="list-inline">
           <li>
-            <span class="icon iconMessage" data-toggle="tooltip" data-placement="bottom" title="Личное сообщения"></span>
+            <span class="icon icon_message" data-toggle="tooltip" data-placement="bottom" title="Личное сообщения"></span>
           </li>
           <li>
             <div class="dropdown">
-              <a class="icon iconSetting" id="dropdownMenu1" data-toggle="dropdown">
+              <a class="icon icon_setting" id="dropdownMenu1" data-toggle="dropdown">
               </a>
               <ul class="dropdown-menu" style="margin-top: 50px" role="menu" aria-labelledby="dropdownMenu1">
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Lists</a></li>
@@ -76,12 +73,6 @@
             </div>
           </li>
 
-          <!--<li>-->
-            <!--<button class="btn btntwet" data-toggle="modal" onclick="showAllert()">-->
-              <!--<span class=""></span>-->
-              <!--<span class="visuallyhidden">Compose new Tweet</span>-->
-            <!--</button>-->
-          <!--</li>-->
         </ul>
 
         <!--<%= link_to 'Log Out', destroy_user_session_path, :method => :delete %>-->
@@ -161,24 +152,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="../../dist/js/bootstrap.min.js"></script>
-<script>
-  function showAllert(){
-      BootstrapDialog.show({
-          title: 'Draggable Dialog',
-          message: 'Your text: <textarea type="text" class="form-control">',
-          draggable: true
-      });
-  }
-  $(document).ready(function(){
-      var current_url = $(location).attr('pathname');
 
-      $('.left a').each(function (key, value){
-          if ($(value).attr('href') == current_url) {
-              $(value).parent().addClass('active');
-          }
-      });
-
-  });
-</script>
 </body>
 </html>
